add css to html version of user manual

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,14 +1,23 @@
-SRCS := intro.md syntax.md indexing.md scripting.md 
+CSS = style.css
+SRCS := intro.md syntax.md indexing.md scripting.md
 
 HTML = /tmp/steno.html
 PDF = /tmp/steno.pdf
 
+OUTPUTS = $(HTML) $(PDF)
 
-all: $(HTML) $(PDF)
 
-$(HTML): $(SRCS)
-	pandoc $^ --toc --standalone -o $@
+all: $(OUTPUTS)
+
+clean:
+	rm -f $(OUTPUTS)
+
+.PHONY: all clean
+
+$(HTML): $(SRCS) $(CSS)
+	pandoc $(SRCS) --toc -t html5 --css $(CSS) --standalone -o $@
 
 $(PDF): $(SRCS)
-	pandoc $^ --toc --standalone -o $@
+	pandoc $^ --toc -N --standalone -o $@
+
 
